[package]
name = "yps"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

# Profiles
[profile.dev]
opt-level = 1
overflow-checks = true
debug-assertions = true
panic = "abort"
codegen-units = 8
lto = false
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
overflow-checks = false
debug-assertions = false
lto = true
debug = false

[dependencies]
youtube_dl = { git = "https://github.com/ElXreno/youtube-dl-rs", branch="feature_download" }
log = "0.4.8"
env_logger = "0.7.1"
glob = "0.3.0"