[package]
name = "yps"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
edition = "2018"

# Profiles
[profile.dev]
opt-level = 0
overflow-checks = true
debug-assertions = true
codegen-units = 8
lto = false
incremental = true

[profile.release]
opt-level = 3
codegen-units = 1
overflow-checks = false
debug-assertions = false
lto = true
debug = false

[dependencies]
youtube_dl = { git = "https://github.com/ElXreno/youtube-dl-rs", branch="fork" }
env_logger = "0.7.1"
log = "0.4.8"
glob = "0.3.0"
clap = "2.33.0"