[package]
name = "yps"
version = "0.1.0"
authors = ["ElXreno <elxreno@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

# Profiles
[profile.release]
lto = true
panic = "abort"
codegen-units = 1

[dependencies]
youtube_dl = { git = "https://github.com/ElXreno/youtube-dl-rs", branch="fork" }
env_logger = "0.7.1"
log = "0.4.8"
glob = "0.3.0"
clap = "2.33.0"
